# BattleShip-with-Basic-AI

./: AIPlayer.cpp  AIPlayer.h  BlankBoard.cpp  BlankBoard.h  CMakeLists.txt  CheatingAI.cpp  CheatingAI.h  Game.cpp  Game.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  RandomAI.cpp  RandomAI.h  SearchAndDestroyAI.cpp  SearchAndDestroyAI.h  main.cpp
